--- a/app/src/main/res/layout/fragment_picker.xml
+++ b/app/src/main/res/layout/fragment_picker.xml
@@ -53,6 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:minHeight="300dp"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
                 android:paddingVertical="24dp">
@@ -73,7 +74,8 @@
                     android:id="@+id/random_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/pick_random"/>
+                    android:text="@string/pick_random"
+                    android:layout_marginTop="6dp"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
