--- a/app/src/main/res/layout/fragment_create_qr.xml
+++ b/app/src/main/res/layout/fragment_create_qr.xml
@@ -5,51 +5,64 @@
     android:layout_height="match_parent"
     tools:context=".fragments.CreateQrFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingHorizontal="24dp">
+        android:fillViewport="true">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/share"
-            android:layout_margin="24dp"
-            android:textSize="36sp"
-            android:textAlignment="center"/>
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingHorizontal="24dp">
 
-        <Space style="@style/spacer"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/share"
+                android:layout_margin="24dp"
+                android:textSize="36sp"
+                android:textAlignment="center"/>
 
-        <TextView
-            android:id="@+id/text_display"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/hello_blank_fragment"/>
+            <Space style="@style/spacer"/>
 
-        <ImageView
-            android:id="@+id/qrcode_display"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
-            android:layout_margin="24dp"/>
+            <TextView
+                android:id="@+id/text_display"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="@string/hello_blank_fragment"/>
 
-        <Space style="@style/spacer"/>
+            <ImageView
+                android:id="@+id/qrcode_display"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:layout_margin="24dp"/>
 
-        <Button
-            android:id="@+id/save_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/save_gallery"
-            android:layout_marginBottom="12dp"/>
+            <Space style="@style/spacer"/>
 
-        <Button
-            android:id="@+id/dismiss_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/close"
-            android:layout_marginBottom="24dp"/>
-    </LinearLayout>
+            <Button
+                android:id="@+id/add_favourite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/add_favourite"
+                android:layout_marginBottom="12dp"/>
+
+            <Button
+                android:id="@+id/save_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/save_gallery"
+                android:layout_marginBottom="12dp"/>
+
+            <Button
+                android:id="@+id/dismiss_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/close"
+                android:layout_marginBottom="24dp"/>
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
