--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -28,4 +28,12 @@
         <item name="android:background">@drawable/rounded_box</item>
         <item name="android:backgroundTint">@color/gray_800</item>
     </style>
+
+    <style name="optionImageBtn">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:src">@drawable/ic_baseline_clear_24</item>
+        <item name="tint">@color/white</item>
+        <item name="android:padding">3dp</item>
+    </style>
 </resources>
