AppInfoFragment, code clenup

--- a/app/src/main/res/layout/fragment_picker.xml
+++ b/app/src/main/res/layout/fragment_picker.xml
@@ -58,7 +58,7 @@
                 android:gravity="center_horizontal"
                 android:paddingVertical="24dp">
 
-                <ProgressBar style="@style/ProgressView"
+                <ProgressBar style="@style/progressView"
                     android:id="@+id/progress_bar"/>
 
                 <TextView
