--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -46,6 +46,7 @@
 
     <style name="roundedBox">
         <item name="android:background">@drawable/rounded_box</item>
+        <item name="android:drawableTint">@color/white</item>
     </style>
 
     <style name="optionImageBtn">
@@ -55,7 +56,7 @@
         <item name="android:padding">3dp</item>
     </style>
 
-    <style name="ProgressView" parent="Widget.AppCompat.ProgressBar.Horizontal">
+    <style name="progressView" parent="Widget.AppCompat.ProgressBar">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:progressTint">@color/sky_500</item>
