--- a/app/src/main/res/layout/fragment_generator.xml
+++ b/app/src/main/res/layout/fragment_generator.xml
@@ -99,7 +99,7 @@
                     android:text="@string/start_text"
                     android:paddingHorizontal="6dp"/>
 
-                <ProgressBar style="@style/ProgressView"
+                <ProgressBar style="@style/progressView"
                     android:id="@+id/progress_bar"/>
             </RelativeLayout>
         </LinearLayout>
