--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -34,15 +34,26 @@
                     android:layout_height="wrap_content"
                     android:text="@string/scan_qr_code"
                     android:textSize="18sp"
-                    android:padding="0dp"/>
+                    android:textAlignment="textStart"
+                    android:drawableEnd="@drawable/ic_baseline_qr_code_scanner_24"
+                    android:paddingVertical="8dp"
+                    android:paddingHorizontal="18dp"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:nestedScrollingEnabled="false"/>
+
+                <TextView
+                    android:id="@+id/app_info_link"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_info_tab"
+                    android:textAlignment="center"
+                    android:layout_marginTop="24dp"/>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 </LinearLayout>
