--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -42,17 +42,24 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_weight="1"
                     android:nestedScrollingEnabled="false"/>
+
+                <TextView
+                    android:id="@+id/app_version_display"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/app_name"
+                    android:textAlignment="center"
+                    android:layout_marginTop="24dp"/>
 
                 <TextView
                     android:id="@+id/app_info_link"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/app_info_tab"
-                    android:textAlignment="center"
-                    android:layout_marginTop="24dp"/>
+                    android:textAlignment="center"/>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
