--- a/app/src/main/res/layout/item_favourite.xml
+++ b/app/src/main/res/layout/item_favourite.xml
@@ -6,7 +6,8 @@
     android:orientation="horizontal"
     android:gravity="center"
     android:layout_marginTop="12dp"
-    android:padding="12dp">
+    android:paddingHorizontal="18dp"
+    android:paddingVertical="12dp">
 
     <TextView
         android:id="@+id/text_display"
@@ -15,7 +16,7 @@
         android:layout_weight="1"
         android:text="List item"
         android:textSize="18sp"
-        android:paddingHorizontal="6dp"/>
+        android:layout_marginEnd="12dp"/>
 
     <ImageButton style="@style/optionImageBtn"
         android:id="@+id/copy_button"
