--- a/app/src/main/res/layout/fragment_picker.xml
+++ b/app/src/main/res/layout/fragment_picker.xml
@@ -70,12 +70,27 @@
 
                 <Space style="@style/spacer"/>
 
-                <Button
-                    android:id="@+id/random_button"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/pick_random"
-                    android:layout_marginTop="6dp"/>
+                    android:orientation="horizontal"
+                    android:gravity="center">
+
+                    <ImageButton style="@style/circleBtn"
+                        android:id="@+id/copy_btn"
+                        android:src="@drawable/ic_baseline_content_copy_24"/>
+
+                    <ImageButton style="@style/circleBtn"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:scaleType="fitXY"
+                        android:id="@+id/random_btn"
+                        android:src="@drawable/ic_baseline_shuffle_24"/>
+
+                    <ImageButton style="@style/circleBtn"
+                        android:id="@+id/share_btn"
+                        android:src="@drawable/ic_baseline_ios_share_24"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
