--- a/app/src/main/res/layout/fragment_app_info.xml
+++ b/app/src/main/res/layout/fragment_app_info.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context="fragments.AppInfoFragment">
+    tools:context=".fragments.sheets.AppInfoFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
